# stutter840

./: AAX.md  AUv2.md  README.md
my_plugins/: CMakeLists.txt
my_plugins/Stutter840/: CMakeLists.txt
my_plugins/Stutter840/image/: needle.html
my_plugins/Stutter840/include/: buffer.h  constants.go  constants.h  controller.h  id.h  parameter.h  processor.h  version.h
my_plugins/Stutter840/resource/: Info.plist  main.uidesc
my_plugins/Stutter840/source/: buffer.cpp  controller.cpp  factory.cpp  parameter.cpp  processor.cpp
my_plugins/Stutter840aax/: CMakeLists.txt
my_plugins/Stutter840aax/source/: aax.cpp
my_plugins/Stutter840auv2/: CMakeLists.txt  audiounitconfig.h
